--- a/src/app/dashboard/inventory/inventory.component.html
+++ b/src/app/dashboard/inventory/inventory.component.html
@@ -14,31 +14,25 @@
                 </div>
                 <div class="row">
                     <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                        <ng-select [items]="options" bindLabel="name" bindValue="value"
-                            placeholder="Filter By" [(ngModel)]="selectedOption" (change)="optionChange($event)"
-                            [clearable]="false">
+                        <ng-select [items]="options" bindLabel="name" bindValue="value" placeholder="Filter By" [(ngModel)]="selectedOption" (change)="optionChange($event)" [clearable]="false">
                         </ng-select>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                        <input type="text" class="form-control" placeholder="Search {{ placeholder }}"
-                            [(ngModel)]="refId" />
+                        <input type="text" class="form-control" placeholder="Search {{ placeholder }}" [(ngModel)]="refId" />
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                        <ng-select class="ng-select inputs2" [items]="cities" bindLabel="city" bindValue="city"
-                            placeholder="Select City" (change)="changeCity($event)">
+                        <ng-select class="ng-select inputs2" [items]="cities" bindLabel="city" bindValue="city" placeholder="Select City" (change)="changeCity($event)">
                         </ng-select>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                        <ng-select class="ng-select inputs2" [items]="locations" bindLabel="location"
-                            bindValue="location" placeholder="Select Location" (change)="changeLocation($event)">
+                        <ng-select class="ng-select inputs2" [items]="locations" bindLabel="location" bindValue="location" placeholder="Select Location" (change)="changeLocation($event)">
                         </ng-select>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                        <input type="date" class="form-control" placeholder="Start Date"
-                            (change)="changeStartDate($event)">
+                        <input type="text" onfocus="(this.type='date')" class="form-control" placeholder="Start Date" (change)="changeStartDate($event)">
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                        <input type="date" class="form-control" placeholder="End Date" (change)="changeEndDate($event)">
+                        <input type="text" onfocus="(this.type='date')" class="form-control" placeholder="End Date" (change)="changeEndDate($event)">
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-3">
                         <input type="number" class="form-control" placeholder="Min Demand" [(ngModel)]="minDemand">
@@ -54,7 +48,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12">     
+                    <div class="col-12">
                         <div class="table-container mb-5 mt-4">
                             <table class="table table-hover">
                                 <thead>
@@ -66,17 +60,16 @@
                                     <th scope="col">Location</th>
                                     <th scope="col">Property Type</th>
                                     <th scope="col">Land Area</th>
-            
+
                                     <th scope="col">Demand</th>
                                     <th scope="col">Beds</th>
                                     <th scope="col">Assigned To</th>
                                     <th scope="col">Added On</th>
                                     <th scope="col">Operations</th>
                                 </thead>
-            
+
                                 <tbody>
-                                    <tr
-                                        *ngFor="let user of user | filterlist: selectedOption:refId | dateFilter: startDate:endDate | demandFilter: minDemand:maxDemand | tableFilter: city | LocationFilter:location |  orderBy: key: reverse | paginate:{itemsPerPage:50,currentPage:p}; ">
+                                    <tr *ngFor="let user of user | filterlist: selectedOption:refId | dateFilter: startDate:endDate | demandFilter: minDemand:maxDemand | tableFilter: city | LocationFilter:location |  orderBy: key: reverse | paginate:{itemsPerPage:50,currentPage:p}; ">
                                         <td>
                                             <span *ngIf="user?.priority == 'Super Hot'"><img class="super-hot"
                                                     src="\assets\icons\super_hot.svg"></span>
@@ -85,7 +78,7 @@
                                             <span *ngIf="user?.priority == 'Normal'"><img class="normal"
                                                     src="\assets\icons\normal.svg"></span>
                                         </td>
-            
+
                                         <td>{{ user?.refId }}</td>
                                         <td>{{user?.added_By?.fullname}}</td>
                                         <td>{{ user?.property_purpose }}</td>
@@ -95,14 +88,13 @@
                                             <b>Type : </b>{{ user?.client_type | titlecase }}
                                         </td>
                                         <td>
-                                            {{ user.city[0]?.city }}<span></span><br /><span class="badge badge-light"
-                                                *ngFor="let loc of user?.location">{{ loc.location }},
+                                            {{ user.city[0]?.city }}<span></span><br /><span class="badge badge-light" *ngFor="let loc of user?.location">{{ loc.location }},
                                             </span>
                                         </td>
-            
+
                                         <td>{{ user.property_type }}</td>
-            
-            
+
+
                                         <td *ngIf="user?.area != null; else elseBlockArea">
                                             <span>{{ user?.area + " - " + user?.area_unit }}</span>
                                         </td>
@@ -123,32 +115,29 @@
                                         </ng-template>
 
                                         <td *ngIf="user?.min_price != null && user.max_price != null else elseBlockDemand">
-                                            <b>Max:</b> {{ user.max_price | currency :'Rs ' : 'symbol' : '1.0-0' }}<br /><b>Min:</b> {{ user.min_price | currency :'Rs
-                                             ' : 'symbol' : '1.0-0' }}
+                                            <b>Max:</b> {{ user.max_price | currency :'Rs ' : 'symbol' : '1.0-0' }}<br /><b>Min:</b> {{ user.min_price | currency :'Rs ' : 'symbol' : '1.0-0' }}
                                         </td>
                                         <ng-template #elseBlockDemand>
                                             <td>{{ user.demand_price | currency :'Rs ' : 'symbol' : '1.0-0' }}</td>
                                         </ng-template>
-            
+
                                         <td>{{ user?.beds_number }}</td>
                                         <td>
-            
+
                                             <span *ngIf="user?.assignedTo?.length === 0">Self</span>
-            
+
                                             <span *ngIf="user?.assignedTo?.length > 0">
                                                 <span *ngFor="let assign of user?.assignedTo">{{ assign }}<br></span>
                                             </span>
                                         </td>
                                         <td>{{ user?.created | date }}</td>
                                         <td>
-                                            <i class="fa fa-edit icon" (click)="setUserToEdit(user)"></i><a
-                                                (click)="setUserToEdit(user)" role="button"></a>
-            
-                                            <i class="fa fa-trash icon" (click)="confirmID(user?._id)" data-toggle="modal"
-                                                data-target="#exampleModal1"></i>
+                                            <i class="fa fa-edit icon" (click)="setUserToEdit(user)"></i>
+                                            <a (click)="setUserToEdit(user)" role="button"></a>
+
+                                            <i class="fa fa-trash icon" (click)="confirmID(user?._id)" data-toggle="modal" data-target="#exampleModal1"></i>
                                         </td>
-                                        <div class="modal fade" id="exampleModal1" tabindex="-1" role="dialog"
-                                            aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                        <div class="modal fade" id="exampleModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                             <div class="modal-dialog" role="document">
                                                 <div class="modal-content">
                                                     <div class="modal-header">
@@ -166,8 +155,7 @@
                                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">
                                                             Close
                                                         </button>
-                                                        <button type="button" class="btn btn-danger" data-dismiss="modal"
-                                                            (click)="deleteInventory()">
+                                                        <button type="button" class="btn btn-danger" data-dismiss="modal" (click)="deleteInventory()">
                                                             Delete
                                                         </button>
                                                     </div>
