--- a/src/app/dashboard/leads/leads.component.html
+++ b/src/app/dashboard/leads/leads.component.html
@@ -14,31 +14,25 @@
                 </div>
                 <div class="row">
                     <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                        <ng-select [items]="options" bindLabel="name" bindValue="value"
-                            placeholder="Filter By" [(ngModel)]="selectedOption" (change)="optionChange($event)"
-                            [clearable]="false">
+                        <ng-select [items]="options" bindLabel="name" bindValue="value" placeholder="Filter By" [(ngModel)]="selectedOption" (change)="optionChange($event)" [clearable]="false">
                         </ng-select>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                        <input class="form-control" id="myInput" type="text" placeholder="Search {{ placeholder }}"
-                            [(ngModel)]="refId" />
+                        <input class="form-control" id="myInput" type="text" placeholder="Search {{ placeholder }}" [(ngModel)]="refId" />
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                        <ng-select class="ng-select inputs2" [items]="cities" bindLabel="city" bindValue="city"
-                            placeholder="Select City" (change)="changeCity($event)">
+                        <ng-select class="ng-select inputs2" [items]="cities" bindLabel="city" bindValue="city" placeholder="Select City" (change)="changeCity($event)">
                         </ng-select>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                        <ng-select class="ng-select inputs2" [items]="locations" bindLabel="location"
-                            bindValue="location" placeholder="Select Location" (change)="changeLocation($event)">
+                        <ng-select class="ng-select inputs2" [items]="locations" bindLabel="location" bindValue="location" placeholder="Select Location" (change)="changeLocation($event)">
                         </ng-select>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                        <input type="date" class="form-control" placeholder="Start Date"
-                            (change)="changeStartDate($event)">
+                        <input type="text" onfocus="(this.type='date')" class="form-control" placeholder="Start Date" (change)="changeStartDate($event)">
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                        <input type="date" class="form-control" placeholder="End Date" (change)="changeEndDate($event)">
+                        <input type="text" onfocus="(this.type='date')" class="form-control" placeholder="End Date" (change)="changeEndDate($event)">
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-3">
                         <input type="number" class="form-control" placeholder="Min Demand" [(ngModel)]="minDemand">
@@ -78,8 +72,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr
-                                        *ngFor="let user of user| filterlist: selectedOption:refId | dateFilter: startDate:endDate | demandFilter: minDemand:maxDemand| orderBy: key:reverse | tableFilter: city | LocationFilter:location | paginate: { itemsPerPage: 50, currentPage: p }">
+                                    <tr *ngFor="let user of user| filterlist: selectedOption:refId | dateFilter: startDate:endDate | demandFilter: minDemand:maxDemand| orderBy: key:reverse | tableFilter: city | LocationFilter:location | paginate: { itemsPerPage: 50, currentPage: p }">
                                         <td>
                                             <span *ngIf="user?.priority == 'Super Hot'">
                                                 <img class="super-hot" src="\assets\icons\super_hot.svg">
@@ -109,8 +102,7 @@
                                         </td>
                                         <ng-template #elseBlockArea>
                                             <td>
-                                                <span
-                                                    *ngIf="user?.max_area == null || user?.min_area == null;else elseBlockArea2">
+                                                <span *ngIf="user?.max_area == null || user?.min_area == null;else elseBlockArea2">
                                                     <span>None</span>
                                                 </span>
                                                 <ng-template #elseBlockArea2>
@@ -122,8 +114,7 @@
                                         </ng-template>
 
                                         <td>
-                                            {{ user.city[0]?.city }}<span>&nbsp;&nbsp;</span><br /><span
-                                                class="badge badge-light" *ngFor="let loc of user.location">{{
+                                            {{ user.city[0]?.city }}<span>&nbsp;&nbsp;</span><br /><span class="badge badge-light" *ngFor="let loc of user.location">{{
                                                 loc.location }},
                                             </span>
                                         </td>
@@ -149,22 +140,18 @@
                                             <i class="fa fa-edit icon" (click)="setUserToEdit(user)"></i>
                                             <a (click)="setUserToEdit(user)" role="button"></a>
 
-                                            <i class="fa fa-trash icon" (click)="confirmID(user._id)"
-                                                data-toggle="modal" data-target="#exampleModal1"></i>
-                                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                            <i class="fa fa-trash icon" (click)="confirmID(user._id)" data-toggle="modal" data-target="#exampleModal1"></i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                             <span><i class="fas fa-exchange-alt" data-toggle="modal"
                                                     data-target="#myModal" (click)="setCurrentUser(user)"></i></span>
                                         </td>
-                                        <div class="modal fade" id="exampleModal1" tabindex="-1" role="dialog"
-                                            aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                        <div class="modal fade" id="exampleModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                             <div class="modal-dialog" role="document">
                                                 <div class="modal-content">
                                                     <div class="modal-header">
                                                         <h5 class="modal-title" id="exampleModalLabel">
                                                             Delete Confirmation
                                                         </h5>
-                                                        <button type="button" class="close" data-dismiss="modal"
-                                                            aria-label="Close">
+                                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                                             <span aria-hidden="true">&times;</span>
                                                         </button>
                                                     </div>
@@ -172,12 +159,10 @@
                                                         Are you sure you want to delete it?
                                                     </div>
                                                     <div class="modal-footer">
-                                                        <button type="button" class="btn btn-secondary"
-                                                            data-dismiss="modal">
+                                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">
                                                             Close
                                                         </button>
-                                                        <button type="button" class="btn btn-danger"
-                                                            data-dismiss="modal" (click)="deleteLead()">
+                                                        <button type="button" class="btn btn-danger" data-dismiss="modal" (click)="deleteLead()">
                                                             Delete
                                                         </button>
                                                     </div>
@@ -212,20 +197,17 @@
                     <div class="col-md-5 col-sm-5">
                         <div class="radio">
                             <div class="btn-group btn-group-toggle">
-                                <label class="btn btn-primary" style="width: 139px"
-                                    [class.active]="assigned_type === 'city_admin'">
+                                <label class="btn btn-primary" style="width: 139px" [class.active]="assigned_type === 'city_admin'">
                                     <input type="radio" [(ngModel)]="assigned_type" value="city_admin" />
                                     City Admin
                                 </label>
 
-                                <label class="btn btn-primary" style="width: 139px"
-                                    [class.active]="assigned_type === 'Admin'">
+                                <label class="btn btn-primary" style="width: 139px" [class.active]="assigned_type === 'Admin'">
                                     <input type="radio" [(ngModel)]="assigned_type" value="Admin" />
                                     Admins
                                 </label>
 
-                                <label class="btn btn-primary" style="width: 139px"
-                                    [class.active]="assigned_type === 'Agents'">
+                                <label class="btn btn-primary" style="width: 139px" [class.active]="assigned_type === 'Agents'">
                                     <input type="radio" [(ngModel)]="assigned_type" value="Agents" />
                                     Agents
                                 </label>
@@ -238,22 +220,17 @@
                 <div class="row">
                     <br /><br />
                     <div *ngIf="assigned_type === 'city_admin'">
-                        <ng-select class="ng-select inputs2" [items]="cityAdminList" bindLabel="city.city"
-                            bindValue="fullname" placeholder="Select city admin"
-                            (change)="changeAssignedToCityAdmin($event)">
+                        <ng-select class="ng-select inputs2" [items]="cityAdminList" bindLabel="city.city" bindValue="fullname" placeholder="Select city admin" (change)="changeAssignedToCityAdmin($event)">
                         </ng-select>
                     </div>
 
                     <div *ngIf="assigned_type === 'Admin'">
-                        <ng-select class="ng-select inputs2" [items]="superAdminList" bindLabel="access"
-                            bindValue="access" placeholder="Select Admin" (change)="changeAssignedAdmin($event)">
+                        <ng-select class="ng-select inputs2" [items]="superAdminList" bindLabel="access" bindValue="access" placeholder="Select Admin" (change)="changeAssignedAdmin($event)">
                         </ng-select>
                     </div>
 
                     <div *ngIf="assigned_type === 'Agents'">
-                        <ng-select #agentSelect class="ng-select inputs2" [items]="agentList" [multiple]="true"
-                            bindLabel="fullname" bindValue="fullname" placeholder="Select Agent"
-                            (change)="changeAssignedAgent($event)">
+                        <ng-select #agentSelect class="ng-select inputs2" [items]="agentList" [multiple]="true" bindLabel="fullname" bindValue="fullname" placeholder="Select Agent" (change)="changeAssignedAgent($event)">
                         </ng-select>
                     </div>
                 </div>
@@ -262,8 +239,7 @@
                 <button type="button" class="btn btn-danger" data-dismiss="modal">
                     Close
                 </button>
-                <button (click)="assignLeadToAgent()" [class.no-click]="assignLeadData.length === 0" type="button"
-                    class="btn" data-dismiss="modal">
+                <button (click)="assignLeadToAgent()" [class.no-click]="assignLeadData.length === 0" type="button" class="btn" data-dismiss="modal">
                     Assign
                 </button>
             </div>
