--- a/src/app/dashboard/both/both.component.html
+++ b/src/app/dashboard/both/both.component.html
@@ -14,31 +14,25 @@
                 </div>
                 <div class="row">
                     <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                        <ng-select [items]="options" bindLabel="name" bindValue="value"
-                            placeholder="Filter By" [(ngModel)]="selectedOption" (change)="optionChange($event)"
-                            [clearable]="false">
+                        <ng-select [items]="options" bindLabel="name" bindValue="value" placeholder="Filter By" [(ngModel)]="selectedOption" (change)="optionChange($event)" [clearable]="false">
                         </ng-select>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                        <input type="text" class="form-control" placeholder="Search {{ placeholder }}"
-                            [(ngModel)]="refId" />
+                        <input type="text" class="form-control" placeholder="Search {{ placeholder }}" [(ngModel)]="refId" />
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                        <ng-select class="ng-select inputs2" [items]="cities" bindLabel="city" bindValue="city"
-                            placeholder="Select City" (change)="changeCity($event)">
+                        <ng-select class="ng-select inputs2" [items]="cities" bindLabel="city" bindValue="city" placeholder="Select City" (change)="changeCity($event)">
                         </ng-select>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                        <ng-select class="ng-select inputs2" [items]="locations" bindLabel="location"
-                            bindValue="location" placeholder="Select Location" (change)="changeLocation($event)">
+                        <ng-select class="ng-select inputs2" [items]="locations" bindLabel="location" bindValue="location" placeholder="Select Location" (change)="changeLocation($event)">
                         </ng-select>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                        <input type="date" class="form-control" placeholder="Start Date"
-                            (change)="changeStartDate($event)">
+                        <input type="text" onfocus="(this.type='date')" class="form-control" placeholder="Start Date" (change)="changeStartDate($event)">
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-3">
-                        <input type="date" class="form-control" placeholder="End Date" (change)="changeEndDate($event)">
+                        <input type="text" onfocus="(this.type='date')" class="form-control" placeholder="End Date" (change)="changeEndDate($event)">
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3 mb-3">
                         <input type="number" class="form-control" placeholder="Min Demand" [(ngModel)]="minDemand">
@@ -64,7 +58,7 @@
                                         <th scope="col">Added By</th>
                                         <th scope="col">Purpose</th>
                                         <th scope="col">Client</th>
-            
+
                                         <th scope="col">Prop. Type</th>
                                         <th scope="col">Area</th>
                                         <th scope="col" width="30">Location</th>
@@ -76,8 +70,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr
-                                        *ngFor="let user of user | filterlist: selectedOption:refId | tableFilter: city | LocationFilter:location | demandFilter: minDemand:maxDemand | dateFilter: startDate:endDate | orderBy: key: reverse | paginate:{itemsPerPage:50,currentPage:p};">
+                                    <tr *ngFor="let user of user | filterlist: selectedOption:refId | tableFilter: city | LocationFilter:location | demandFilter: minDemand:maxDemand | dateFilter: startDate:endDate | orderBy: key: reverse | paginate:{itemsPerPage:50,currentPage:p};">
                                         <td>
                                             <span *ngIf="user?.priority == 'Super Hot'"><img class="super-hot"
                                                     src="\assets\icons\super_hot.svg"></span>
@@ -86,20 +79,19 @@
                                             <span *ngIf="user?.priority == 'Normal'"><img class="normal"
                                                     src="\assets\icons\normal.svg"></span>
                                         </td>
-            
-            
+
+
                                         <td>{{ user?.refId }}</td>
                                         <td>{{user?.added_By?.fullname}}</td>
                                         <td>{{ user?.property_purpose }}</td>
-            
-                                        <td><b>Name : </b>{{ user?.client_name | titlecase }} <br> <b>Number : </b>{{
-                                            user?.client_number}} <br>
+
+                                        <td><b>Name : </b>{{ user?.client_name | titlecase }} <br> <b>Number : </b>{{ user?.client_number}} <br>
                                             <b> Client Type :</b> {{ user?.client_type }}
                                         </td>
-            
+
                                         <td>{{ user?.property_type }}</td>
-            
-            
+
+
                                         <td *ngIf="user?.area != null; else elseBlockArea">
                                             <span>{{ user?.area + " - " + user?.area_unit }}</span>
                                         </td>
@@ -118,14 +110,13 @@
                                                 </ng-template>
                                             </td>
                                         </ng-template>
-            
+
                                         <td>
-                                            {{user?.city[0]?.city}}<span>&nbsp;&nbsp;</span><br><span class="badge badge-light"
-                                                *ngFor="let loc of user?.location">{{ loc.location }}, </span>
+                                            {{user?.city[0]?.city}}<span>&nbsp;&nbsp;</span><br><span class="badge badge-light" *ngFor="let loc of user?.location">{{ loc.location }}, </span>
                                         </td>
-            
-                                        <td *ngIf="user.min_price != null && user.max_price != null else elseBlockDemand"><b>Max:</b> {{ user.max_price | currency :'Rs ' : 'symbol' : '1.0-0'
-                                            }}<br><b>Min:</b> {{ user.min_price | currency :'Rs ' : 'symbol' : '1.0-0' }}</td>
+
+                                        <td *ngIf="user.min_price != null && user.max_price != null else elseBlockDemand"><b>Max:</b> {{ user.max_price | currency :'Rs ' : 'symbol' : '1.0-0' }}
+                                            <br><b>Min:</b> {{ user.min_price | currency :'Rs ' : 'symbol' : '1.0-0' }}</td>
                                         <ng-template #elseBlockDemand>
                                             <td>{{ user.demand_price | currency :'Rs ' : 'symbol' : '1.0-0' }}</td>
                                         </ng-template>
@@ -139,13 +130,11 @@
                                         <td>{{ user?.created | date: "dd/MM/yyyy"}}</td>
                                         <td><i class="fa fa-edit icon" (click)="setUserToEdit(user)"></i>
                                             <a (click)="setUserToEdit(user)" role="button"></a>
-            
-                                            <i class="fa fa-trash icon" (click)="confirmID(user._id)" data-toggle="modal"
-                                                data-target="#exampleModal1"></i>
-            
+
+                                            <i class="fa fa-trash icon" (click)="confirmID(user._id)" data-toggle="modal" data-target="#exampleModal1"></i>
+
                                         </td>
-                                        <div class="modal fade" id="exampleModal1" tabindex="-1" role="dialog"
-                                            aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                        <div class="modal fade" id="exampleModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                             <div class="modal-dialog" role="document">
                                                 <div class="modal-content">
                                                     <div class="modal-header">
@@ -161,8 +150,7 @@
                                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">
                                                             Close
                                                         </button>
-                                                        <button type="button" class="btn btn-danger" data-dismiss="modal"
-                                                            (click)="deleteLead()">
+                                                        <button type="button" class="btn btn-danger" data-dismiss="modal" (click)="deleteLead()">
                                                             Delete
                                                         </button>
                                                     </div>
